[gd_scene load_steps=4 format=3 uid="uid://cvquosur8j5gd"]

[ext_resource type="Script" uid="uid://dvqtl7jib4oti" path="res://scenes/game.gd" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://deludixq5wg4h" path="res://scenes/dev_menu.tscn" id="2_lnu2h"]
[ext_resource type="PackedScene" uid="uid://bh8w2mwfgynfl" path="res://scenes/pregame.tscn" id="2_yqjtg"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uwrxv")

[node name="dev_menu" parent="." instance=ExtResource("2_lnu2h")]
visible = false

[node name="pregame" parent="." instance=ExtResource("2_yqjtg")]

[node name="Board" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Players" type="Control" parent="."]
anchors_preset = 0

[node name="PlayerTop" type="Control" parent="Players"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="PlayerBottom" type="Control" parent="Players"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="PlayerLeft" type="Control" parent="Players"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="PlayerRight" type="Control" parent="Players"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="UI" type="CanvasLayer" parent="."]
